fix(module:empty): fix empty image style in dark mode (#4924)
close #4921

--- a/components/empty/style/index.less
+++ b/components/empty/style/index.less
@@ -10,10 +10,6 @@
   line-height: 22px;
   text-align: center;
 
-  &-rtl {
-    direction: rtl;
-  }
-
   &-image {
     height: 100px;
     margin-bottom: 8px;
